--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/OrbitControls.js"></script>
 <script src="js/THREEx.KeyboardState.js"></script>
+<script src="game/ennemy.js"></script>
 <script src="game/player.js"></script>
 <script src="game/graphic.js"></script>
 <script src="game/physic.js"></script>
@@ -49,7 +50,7 @@
     var keyboard = new THREEx.KeyboardState();
     var clock = new THREE.Clock();
     var player1,
-        player2;
+        ennemy1;
     var WIDTH = 600,
         HEIGHT = 400;
 
